# Project-Seed

./: DETAILED_GUIDE.md  LICENSE  QUICKSTART.md  README.md  USAGE.md  anonymized_data.csv  data.csv  data3.csv  example_usage.py  pyproject.toml  requirements.txt  restored_data.csv  setup.py  vault.sqlite
anonymizer/: __init__.py  __main__.py  cli.py
anonymizer/config/: __init__.py  profiles.py
anonymizer/core/: __init__.py  detector.py  transformers.py  vault.py
anonymizer/utils/: __init__.py  csv_processor.py  excel_processor.py  validators.py
